@@ -1,10 +1,7 @@
 #!/bin/sh
 # This file is in the public domain.
 
-if [ -z "$HBPK_WORKDIR" ]
-then
-	PKGDEST=@PKGDEST@
-fi
+PKGDEST=@PKGDEST@
 PKGDBDIR=@PKGDBDIR@
 
 if [ $# -eq 0 ]
